# squadmaker

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  pubspec.yaml
backend/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
backend/migrations/: 20230426011827_enums.up.sql  20230426011840_user.up.sql  20230426011844_player.up.sql  20230426011849_trophy.up.sql  20230426011901_score_type.up.sql  20230426011914_league.up.sql  20230426011918_game.up.sql  20230426011922_payment.up.sql  20230426011922_teammate.up.sql  20230426011928_score.up.sql  20230426011935_attendance.up.sql
backend/migrations/models/: attendance.sql  enums.sql  league.sql  player.sql  score.sql  trophy.sql
backend/scripts/: generate-cert.sh  generate-dummy-data.py  run.sh  setup.sh  test.sh
backend/sql/: create_user.sql  create_user_article.sql  fetch_user_articles.sql  fetch_users.sql  schema.sql
backend/sql/models/: attendance.sql  game.sql  league.sql  payment.sql  player.sql  score.sql  score_type.sql  trophy.sql  user.sql
backend/src/: enums.rs  lib.rs  main.rs  services.rs  state.rs
backend/src/services/: attendance.rs  game.rs  league.rs  mod.rs  payment.rs  player.rs  score.rs  score_type.rs  teammate.rs  trophy.rs  user.rs
backend/tests/: README.md  attendance.rs  game.rs  league.rs  payment.rs  player.rs  score.rs  score_type.rs  teammate.rs  trophy.rs  user.rs
backend/tests/data/: dummy.sql
backend/tests/fixtures/: attendance.sql  games.sql  leagues.sql  payments.sql  players.sql  scores.sql  teammates.sql  users.sql
(+77 files in other folders)
