[package]
name = "squadmaker-backend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
futures = "0.3.28"
openssl = { version = "0.10" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
derive_more = "0.99.7"
dotenv = "0.15.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
