[package]
name = "squadmaker-backend"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "time"] }
time = "0.3.20"
serde_with = { version = "2.0.0", features = ["time_0_3"] }
strum = "0.24.1"
strum_macros = "0.24.3"
bytes = "1.4.0"
actix-service = "2.0.2"
